# diff-triangle-tracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  ext.cpp  setup.py
CMake/: FindOptiX7.cmake
diff_tritracer/: __init__.py
tritracer/: CMakeLists.txt  auxiliary.h  backward.cu  closestk.h  common.h  config.h  envlight.cu  exception.h  forward.cu  params.h  pipeline.cpp  reflect.cu  refract.cu  tracer.cpp  tracer.h  vecmath.h
